--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
             
         </header>
 
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam natus facilis placeat, pariatur blanditiis ea praesentium animi molestiae, reprehenderit vero iure rem, dolor hic voluptates voluptatibus voluptatum magnam nam eaque?
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have before</h3>
+                        <p class="paragraph">
+                            Necessitatibus quae ipsum dolores , hic illum, aliquam vero at provident libero id quibusdam! Cumque, iure. Laborum, dolor.    
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        Image Composition
+                    </div>
+                </div>
+            </section>
+        </main>
+
 
         
     </body>
