--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
             
         </header>
@@ -123,7 +123,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -156,7 +156,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$436</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$628</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -348,5 +348,23 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum vitae sapien pellentesque habitant morbi tristique. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Eget aliquet nibh praesent tristique. A diam maecenas sed enim ut sem. Eget nulla facilisi etiam dignissim. Integer enim neque volutpat ac tincidunt vitae. Malesuada proin libero nunc consequat interdum varius sit amet mattis. Et malesuada fames ac turpis egestas. Et magnis dis parturient montes nascetur ridiculus. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Aliquam ultrices sagittis orci a.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
